# legal-epistemic-control-graph

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.mmd  failure_modes.md  graph_contract.md  reference_model.md  sample_exception_report_notes.md  why_not_just_rag.md
sample-data/: baseline_msa.json  company_policy.json  expected_findings.json  expected_findings_v2.json  model_run.json  model_run_v2.json  vendor_draft_contract.json
schema/: graph_schema.json  graph_schema.md  ontology.md
src/: __init__.py  config.py  curate.py  db.py  evaluate.py  ingest.py  render_report.py  review.py  validate.py
tests/: conftest.py  test_evaluation_rules.py  test_graph_invariants.py  test_review_outputs.py  test_schema_validation.py
